# csv-database-importer

./: .dockerignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: db.py  main.py
infra/: backend.tf  step_function.tf  vpc.tf
infra/main/: backend.tf  ecs.tf  event_bridge.tf  s3.tf  step_function.tf  step_functions.tf
local_db/init/: create_table.sql
