[tool.poetry]
name = "s3-event-trigger-fargate"
version = "0.1.0"
description = ""
authors = ["Shun Fukusumi <shun.fukusumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
