[tool.poetry]
name = "csv-database-importer"
version = "0.1.0"
description = ""
authors = ["Shun Fukusumi <shun.fukusumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.17"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
types-PyMySQL = "^1.0.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
