[tool.poetry]
name = "csv-database-importer"
version = "0.1.0"
description = ""
authors = ["Shun Fukusumi <shun.fukusumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.17"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
types-PyMySQL = "^1.0.19"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

# flake8 is not supported for pyproject yet
# issue: https://github.com/python/mypy/issues/5205
# [tool.flake8]
# max-line-length = 120
# extend-ignore = E203

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
